# incidents-weekly-overview

./: .gitignore  README.md  env.tmpl  justfile  monthly_review_data.json  pyproject.toml
.github/workflows/: ci.yml
scripts/: iim_active.py  iim_gdocs_to_jira.py  iim_weekly_overview.py  libjira.py
src/iim/: convert_timezone.py  iim_active.py  iim_data.py  iim_gdoc_download.py  iim_gdocs_to_jira.py  iim_incident_data.py  iim_lint.py  iim_mpir_selection.py  iim_qbr.py  iim_sync.py  iim_to_review.py  iim_weekly_overview.py  libgdoc.py  libjira.py  libreport.py  libreportparser.py  libstats.py  libsync.py
src/iim/data/: service_product_entity_bucket.json
templates/: incident_overview.html
tests/: conftest.py  test_iim_data.py  test_iim_gdoc_download.py  test_iim_gdocs_to_jira.py  test_iim_incident_data.py  test_iim_lint.py  test_iim_mpir_selection.py  test_iim_qbr.py  test_iim_to_review.py  test_iim_weekly_overview.py  test_libgdoc.py  test_libjira.py  test_libreport.py  test_libreportparser.py  test_libsync.py
tests/data/: iim_131_service_alpha.md  incident_bravoservice_v20250520.md
tests/data/20260312/: incident_testreport.md
tests/data/pre20250520/: incident_deltaservice.md  incident_epsilon.md  incident_symbols.md
